--- a/SeniorDesign/SeniorDesign/app/src/main/res/layout/activity_new_entry.xml
+++ b/SeniorDesign/SeniorDesign/app/src/main/res/layout/activity_new_entry.xml
@@ -3,8 +3,7 @@ xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:orientation="vertical"
-    android:layout_gravity="center|Center">
+android:orientation="vertical">
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_weight="1"
@@ -28,9 +27,8 @@ android:orientation="vertical"
             android:layout_width="162dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center|center"
-            android:text="@string/data_view"
-            android:onClick="viewData"
-            android:id="@+id/viewData" />
+            android:text="@string/data_clear"
+            android:id="@+id/clearData" />
     </LinearLayout>
 
     <TextView
